--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -93,10 +93,6 @@ nav a:hover{
 
 }
 
-/*nav li:first-child{
-    margin-right: auto;
-} */
-
 
 
 nav ul{
@@ -177,23 +173,20 @@ nav ul{
     font-family: Poppins, sans-serif;
     line-height: 25px;
     color: #00aa72;
-   
     padding: 10px;
     margin: 5px;
 }
 
 .divcoin{
-    font-size: 10px;
+    font-size: 9px;
     background-color: rgb(163, 116, 116);
-    width:1px;
+    width: 2px;
     height: 30px;
     border-radius: 2px;
     position: absolute;
     top: 10px;
     left: 310px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    
 }
 .divcoin1{
     font-size: 10px;
@@ -204,9 +197,7 @@ nav ul{
     position: absolute;
     top: 10px;
     left: 410px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+   
 }
 
 .coin2{
@@ -289,6 +280,9 @@ input, button {
 .unk{
     color: grey;
     text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+   
 }
 
 .link{
@@ -315,8 +309,13 @@ input, button {
     
 }
 
+
+.slidenew1{
+    display: flex;
+    justify-content: center;
+}
 .slidenew{
-    margin-left: 170px;
+    
     justify-content: center;
     color: white;
     display: flex;
@@ -516,6 +515,7 @@ input, button {
     color: white;
     border-radius: 3px;
     box-shadow: white;
+    text-decoration: none;
     
 }
 
@@ -528,12 +528,19 @@ input, button {
     justify-content: center;
     align-items: center;
     margin-left: 500px;
+    text-decoration: none;
+}
+
+.ps1 a{
+    text-decoration: none;
 }
 
 /* Advanced table styling */
+
 .advanced-table1{
     border-radius: 10px;
     padding: 5px;
+    
 }
 
 .advanced-tablef{
@@ -605,13 +612,15 @@ input, button {
     font-size: 10px;
 }
 
+.ads4{
+    display: flex;
+    justify-content: center;
+}
 .ads3{
     display: flex;
-    width:980px;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    margin-left: 120px;
+    width:50%;
+   justify-content: center;
+   align-items: center;
     border-radius: 10px;
 }
 
@@ -619,6 +628,7 @@ input, button {
     color: white;
     padding: 10px;
     text-align: center;
+   
 }
 .sinfo{
     color: rgb(212, 184, 184);
@@ -626,7 +636,13 @@ input, button {
     margin-left: 100px;
     margin-right: 100px;
     font-family: Poppins, sans-serif;;
-    font-size: 12px;
+    font-size: 15px;
+    line-height: 20px;
+}
+
+.jnews{
+    text-align: center;
+    color: white;
 }
 
 *{
@@ -730,18 +746,7 @@ ul{
     background: #e9ecef; /* Track hover color */
   }
 
-  /* Add Scroll Buttons for Navigation */
-  .scroll-container::before, .scroll-container::after {
-    content: '';
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: #495057;
-    color: white;
-    text-align: center;
-    line-height: 20px;
-    cursor: pointer;
-  }
+
 
   /* Position scroll buttons */
   .scroll-container::before {
@@ -807,14 +812,12 @@ ul{
   }
   
   .dd{
-    background-color: rgb(51, 47, 47)
-      height: 350px;
+    background-color: rgb(51, 47, 47);
+      height: 400px;
       width: 300px;
       border-radius: 10px;
-     
       margin-top: 20px;
       padding: 20px;
-      
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     
@@ -1361,7 +1364,7 @@ p a{
 .logo{
     margin-left: 2px;
 }
-
+/* just for andriod phone*/
 @media  (max-width: 760px) {
     .h2 {
         display: none;
@@ -1369,6 +1372,10 @@ p a{
         justify-content: center;
      
     }
+
+
+
+
 
     .h2 {
         animation: slide 25s infinite linear; /* Slower animation for smaller screens */
@@ -1394,7 +1401,7 @@ p a{
        flex-wrap: wrap;
        gap: 15px;
        justify-content: center;
-      margin-top: 500px;
+      
     }
     .choice1{
     display: none;
@@ -1428,7 +1435,7 @@ p a{
    flex-wrap: wrap;
    gap: 15px;
    justify-content: center;
-  margin-top: 500px;
+  
 }
 
 .carlist-slide{
@@ -1436,7 +1443,7 @@ p a{
    flex-wrap: wrap;
    gap: 15px;
    justify-content: center;
-  margin-top: 450px;
+ 
 }
 .img2{
     width: 250px;
