--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -571,8 +571,16 @@ input, button {
     
 }
 
+.coinsm{
+    display: flex;
+    justify-content: center;
+    width: 30px;
+    border-radius: 100px;
+}
+
 td a{
     text-decoration: none;
+    color: #00aa72;
     
 }
 .advanced-table th, .advanced-table td {
