--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -150,8 +150,10 @@ nav ul{
 }
 
 .logo{
-    width: 200px;
+    
     margin-left: 10px;
+    border-radius: 100%;
+   height: 50px;
 }
 
 .unn{
@@ -1384,7 +1386,12 @@ p a{
      
     }
 
-
+    .logo{
+    
+        margin-left: 10px;
+        border-radius: 100%;
+       height: 50px;
+    }
 
 
 
